--- a/cto-config-dev.properties
+++ b/cto-config-dev.properties
@@ -1,3 +1,6 @@
-﻿USER.LOGIN_SESSION_NAME=user_login_session_user#session登录name
-USER.LOGIN_COOKIE_NAME=user_login_cookie_user#cookie登录name
-USER.LOGIN_SESSION_CODE=user_login_random_code#session登录验证码name
+﻿#session登录name
+USER.LOGIN_SESSION_NAME=user_login_session_user
+#cookie登录name
+USER.LOGIN_COOKIE_NAME=user_login_cookie_user
+#session登录验证码name
+USER.LOGIN_SESSION_CODE=user_login_random_code
