--- a/cto-config-dev.properties
+++ b/cto-config-dev.properties
@@ -1,4 +1,37 @@
-﻿#session登录name
+﻿#eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+eureka.client.serviceUrl.defaultZone=http://cto:cto!_123@127.0.0.1:9001/eureka
+
+#security
+management.security.enabled=false
+
+#config
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
+spring.cloud.config.uri=http://127.0.0.1:9002/
+
+#redis
+spring.redis.host=123.206.93.119
+spring.redis.port=6380
+spring.redis.password=""
+spring.redis.pool.max-active=1000
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=100
+
+
+#页面默认前缀目录
+spring.mvc.view.prefix:/WEB-INF/view/
+#响应页面默认后缀
+spring.mvc.view.suffix:.jsp
+
+#fastdfs
+file_server=http://123.206.93.119/
+
+#Ribbon的负载均衡策略
+springboot-h2.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+
+#session登录name
 USER.LOGIN_SESSION_NAME=user_login_session_user
 #cookie登录name
 USER.LOGIN_COOKIE_NAME=user_login_cookie_user
