--- a/cto-config-dev.properties
+++ b/cto-config-dev.properties
@@ -20,9 +20,8 @@ spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=100
 
 
-#页面默认前缀目录
+#view.prefix&suffix
 spring.mvc.view.prefix:/WEB-INF/view/
-#响应页面默认后缀
 spring.mvc.view.suffix:.jsp
 
 #fastdfs
@@ -31,9 +30,9 @@ file_server=http://123.206.93.119/
 #Ribbon的负载均衡策略
 springboot-h2.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
 
-#session登录name
+#session_login_name
 USER.LOGIN_SESSION_NAME=user_login_session_user
-#cookie登录name
+#cookie_login_name
 USER.LOGIN_COOKIE_NAME=user_login_cookie_user
-#session登录验证码name
-USER.LOGIN_SESSION_CODE=user_login_random_code
+#session_login_name
+USER.LOGIN_SESSION_CODE=user_login_session_code
