--- a/cto-config-dev.properties
+++ b/cto-config-dev.properties
@@ -21,8 +21,8 @@ spring.redis.pool.max-idle=100
 
 
 #view.prefix&suffix
-spring.mvc.view.prefix:/WEB-INF/view/
-spring.mvc.view.suffix:.jsp
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
 
 #fastdfs
 file_server=http://123.206.93.119/
