--- a/cto-config-test.properties
+++ b/cto-config-test.properties
@@ -8,7 +8,7 @@ management.security.enabled=false
 
 #config
 spring.cloud.config.label=master
-spring.cloud.config.profile=dev
+spring.cloud.config.profile=test
 spring.cloud.config.uri=http://127.0.0.1:9002/
 
 #redis
