--- a/test/common.properties
+++ b/test/common.properties
@@ -2,8 +2,8 @@
 spring.session.store-type=none
 
 #mybatis
-mybatis.type-aliases-package=com.cto.user.model
-mybatis.mapper-locations=classpath:com/cto/user/mapper/*.xml
+mybatis.type-aliases-package=com.cto.*.model
+mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
 
 #pagehelper
 pagehelper.helperDialect=mysql
