--- a/test/cto-config-front.properties
+++ b/test/cto-config-front.properties
@@ -1,4 +1,7 @@
-﻿#view.prefix/suffix
+﻿#session不需存放redis
+spring.session.store-type=none
+
+#view.prefix/suffix
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
