--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -123,3 +123,7 @@ swg.title=Swagger2 for CTO Cloud 中文文档
 swg.description=更多信息请关注：https://www.6zcto.com/
 swg.termsOfServiceUrl=https://www.6zcto.com/
 swg.version=1.0
+
+#properties
+prop.charset=UTF-8
+prop.extensions=prop,properties,yml,xml
