--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -128,7 +128,7 @@ swg.index=swagger-ui.html
 
 #request.time.patterns
 path.patterns.add=/**
-path.patterns.exclude=/webjars/**
+path.patterns.exclude=/webjars/**,/resource/**
 
 #properties
 prop.charset=UTF-8
