--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -15,6 +15,7 @@ resource.path.handler=/resource/**
 resource.path.locations=/resource/
 
 #error page
+page.error.common=
 page.error.unauthorized=/error/401
 page.error.not_found=/error/404
 page.error.internal_server_error=/error/500
