--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -9,10 +9,14 @@ mybatis.type-aliases-package=com.cto.model
 mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
 
 #mvc
-time.path.add.patterns=/**
-time.path.exclude.patterns=/webjars/**,/resource/**
-resource.path.handler=/resource/**
-resource.path.locations=/resource/
+time.path.add.patterns=
+#/**
+time.path.exclude.patterns=
+#/webjars/**,/resource/**
+resource.path.handler=
+#/resource/**
+resource.path.locations=
+#/resource/
 
 #error page
 page.error.common=
