--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -10,13 +10,10 @@ mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
 
 #mvc
 time.path.add.patterns=
-#/**
-time.path.exclude.patterns=
-#/webjars/**,/resource/**
-resource.path.handler=
-#/resource/**
-resource.path.locations=
-#/resource/
+time.path.exclude.patterns=/resource/**
+#/webjars/**
+resource.path.handler=/resource/**
+resource.path.locations=/resource/
 
 #error page
 page.error.common=
