--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -9,9 +9,8 @@ mybatis.type-aliases-package=com.cto.model
 mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
 
 #mvc
-time.path.add.patterns=
+time.path.add.patterns=/**
 time.path.exclude.patterns=/resource/**
-#/webjars/**
 resource.path.handler=/resource/**
 resource.path.locations=/resource/
 
@@ -20,10 +19,6 @@ page.error.common=
 page.error.unauthorized=/error/401
 page.error.not_found=/error/404
 page.error.internal_server_error=/error/500
-
-#properties
-prop.charset=UTF-8
-prop.extensions=prop,properties,yml,xml
 
 #log
 logging.level.root=WARN
@@ -140,7 +135,5 @@ swg.title=Swagger2 for CTO Cloud 中文文档
 swg.description=更多信息请关注：https://www.6zcto.com/
 swg.termsOfServiceUrl=https://www.6zcto.com/
 swg.version=1.0
-swg.baseResource=webjars
-swg.index=swagger-ui.html
 
 
