--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -1,26 +1,4 @@
-﻿#application
-#慢sql毫秒数
-control.run.min.time=500
-#session不需存放redis
-spring.session.store-type=none
-
-#mybatis
-mybatis.type-aliases-package=com.cto.model
-mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
-
-#mvc
-time.path.add.patterns=/**
-time.path.exclude.patterns=/resource/**
-resource.path.handler=/resource/**
-resource.path.locations=/resource/
-
-#error page
-page.error.common=
-page.error.unauthorized=/error/401
-page.error.not_found=/error/404
-page.error.internal_server_error=/error/500
-
-#log
+﻿#log
 logging.level.root=WARN
 logging.level.org.springframework.web=error
 logging.level.com.cto=info
