--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -50,5 +50,8 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 
+#prop
+prop.charset=UTF-8
+prop.extensions=prop,properties,yml,xml,yaml,json
 
 
