--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -51,7 +51,7 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 
 #prop
-prop.charset=UTF-8
-prop.extensions=prop,properties,yml,xml,yaml,json
+#prop.charset=UTF-8
+#prop.extensions=prop,properties,yml,xml,yaml,json
 
 
