--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -5,8 +5,8 @@ zuul.host.socket-timeout-millis=60000
 zuul.host.connect-timeout-millis=10000
 #filter
 zuul.add-host-header=true
-zuul.prefix=/api
-zuul.routes.user.path=/user/**
+#zuul.prefix=/api
+zuul.routes.user.path=/api/user/**
 zuul.routes.user.serviceId=cto-server-user
 zuul.routes.front.path=/**
 zuul.routes.front.serviceId=cto-server-front
