--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -6,12 +6,14 @@ zuul.host.connect-timeout-millis=10000
 #filter
 zuul.add-host-header=true
 #zuul.prefix=/api
-zuul.routes.user.path=/api/user/**
-zuul.routes.user.serviceId=cto-server-user
-zuul.routes.front.path=/**
-zuul.routes.front.serviceId=cto-server-front
-#user.ribbon.listOfServers=127.0.0.1:8800 #负载均衡
-#front.ribbon.listOfServers=127.0.0.1:8800 #负载均衡
+zuul.routes.api-a.path=/api/user/**
+zuul.routes.api-a.serviceId=cto-server-user
+zuul.routes.api-b.path=/**
+zuul.routes.api-b.serviceId=cto-server-front
+
+#负载均衡
+#user.ribbon.listOfServers=127.0.0.1:8800 
+#front.ribbon.listOfServers=127.0.0.1:8800 
 
 #ribbon
 ribbon.eureka.enabled=false
