--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -18,7 +18,7 @@ zuul.routes.cto-server-front=/**
 #front.ribbon.listOfServers=127.0.0.1:8800 
 
 #ribbon
-ribbon.eureka.enabled=false
+ribbon.eureka.enabled=true
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
 ribbon.MaxAutoRetries=0
