--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -6,12 +6,10 @@ zuul.host.connect-timeout-millis=10000
 #filter
 zuul.add-host-header=true
 #zuul.prefix=/api
-#zuul.routes.cto-server-user.path=/api/user/**
-#zuul.routes.cto-server-user.serviceId=cto-server-user
-#zuul.routes.cto-server-front.path=/**
-#zuul.routes.cto-server-front.serviceId=cto-server-front
-zuul.routes.cto-server-user=/api/user/**
-zuul.routes.cto-server-front=/**
+zuul.routes.cto-server-user.path=/api/user/**
+zuul.routes.cto-server-user.serviceId=cto-server-user
+zuul.routes.cto-server-front.path=/**
+zuul.routes.cto-server-front.serviceId=cto-server-front
 
 #负载均衡
 #user.ribbon.listOfServers=127.0.0.1:8800 
