--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -8,7 +8,7 @@ zuul.add-host-header=true
 #zuul.prefix=/api
 #zuul.routes.cto-server-user.path=/api/user/**
 #zuul.routes.cto-server-user.serviceId=cto-server-user
-zuul.routes.front.path=/**
+zuul.routes.front.path=/cto/**
 zuul.routes.front.serviceId=cto-server-front
 
 #负载均衡
