--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -6,10 +6,11 @@ zuul.host.connect-timeout-millis=10000
 #filter
 zuul.add-host-header=true
 #zuul.prefix=/api
-zuul.routes.user.path=/api/user/**
-zuul.routes.user.serviceId=cto-server-user
-zuul.routes.front.path=/**
-zuul.routes.front.serviceId=cto-server-front
+#zuul.routes.user.path=/api/user/**
+#zuul.routes.user.serviceId=cto-server-user
+#zuul.routes.front.path=/**
+#zuul.routes.front.serviceId=cto-server-front
+zuul.routes.cto-server-front=/**
 
 #负载均衡
 #user.ribbon.listOfServers=127.0.0.1:8800 
