--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -109,8 +109,8 @@ easemob.client.secret={cipher}AIAwoH2bwYEixnBQ5K1F8PPC7t9xZvzA3GY3LI+1X7lbytvJCg
 
 #swagger2
 swg.basePackage=com.cto
-swg.title=Swagger2 for CTO Cloud 中文文档
-swg.description=更多信息请关注：https://www.6zcto.com/
+swg.title=Chinese document for CTO Cloud
+swg.description=More information https://www.6zcto.com/
 swg.termsOfServiceUrl=https://www.6zcto.com/
 swg.version=1.0
 
