--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -39,7 +39,7 @@ spring.http.multipart.max-request-size=2000Mb
 
 #mybatis
 mybatis.type-aliases-package=com.cto.model
-mybatis.mapper-locations=classpath:com/cto/*/mapper/*.xml
+mybatis.mapper-locations=classpath:com/cto/mapper/*.xml
 
 #error page
 page.error.common=
