--- a/test/cto-config-front.properties
+++ b/test/cto-config-front.properties
@@ -3,7 +3,7 @@ logging.level.root=WARN
 logging.level.org.springframework.web=error
 logging.level.com.cto=info
 logging.level.com.liuzi=debug
-logging.file=/log/cto/front.log
+logging.file=/Logs/CTOCloud/front_%d{yyyy/MM/dd}.log
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
