--- a/test/cto-config-gateway.properties
+++ b/test/cto-config-gateway.properties
@@ -35,3 +35,13 @@ spring.redis.pool.min-idle=0
 spring.redis.pool.max-wait=-1
 spring.redis.timeout=100000
 spring.redis.pool.max-active=8
+
+#log
+logging.level.root=WARN
+logging.level.org.springframework.web=error
+logging.level.com.cto=info
+logging.level.com.liuzi=debug
+logging.file=/Logs/CTOCloud/gateway_%d{yyyy/MM/dd}.log
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+
