--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -63,8 +63,9 @@ resource.path.handler=/resource/**
 resource.path.locations=/resource/
 
 #view.prefix/suffix
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
-
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+spring.view.prefix=/WEB-INF/view/
+spring.view.suffix=.jsp
 
 
