--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -57,13 +57,19 @@ pagehelper.supportMethodsArguments=true
 #prop.extensions=prop,properties,yml,xml,yaml,json
 
 #mvc
-time.path.add.patterns=/**
-time.path.exclude.patterns=/resource/**
-resource.path.handler=/resource/**
-resource.path.locations=/resource/
+#time.path.add.patterns=/**
+#time.path.exclude.patterns=/resource/**
+#resource.path.handler=/resource/**
+#resource.path.locations=/resource/
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
 
-#view.prefix/suffix
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
+#thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/WEB-INF/view/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding: UTF-8
+#spring.thymeleaf.content-type=text/html
+#spring.thymeleaf.mode=HTML5
 
 
