--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -68,8 +68,10 @@ pagehelper.supportMethodsArguments=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/WEB-INF/view/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.encoding: UTF-8
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=LEGACYHTML5
 #spring.thymeleaf.content-type=text/html
 #spring.thymeleaf.mode=HTML5
+
 
 
