--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -42,10 +42,10 @@ mybatis.type-aliases-package=com.cto.model
 mybatis.mapper-locations=classpath:com/cto/mapper/*.xml
 
 #error page
-page.error.common=
-page.error.unauthorized=/error/401
-page.error.not_found=/error/404
-page.error.internal_server_error=/error/500
+#page.error.common=
+#page.error.unauthorized=/error/401
+#page.error.not_found=/error/404
+#page.error.internal_server_error=/error/500
 
 #pagehelper
 pagehelper.helperDialect=mysql
@@ -76,6 +76,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 #devtools
 spring.devtools.restart.enabled=true
 #spring.devtools.restart.additional-paths=src/main/java
-spring.devtools.restart.exclude=resource/**,template/**,WEB-INF/**
+spring.devtools.restart.exclude=resource/**,template/**,view/**,static/**,tld/**
 
 
