--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -66,7 +66,7 @@ pagehelper.supportMethodsArguments=true
 
 #thymeleaf
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/WEB-INF/view/
+spring.thymeleaf.prefix=classpath:/view/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=LEGACYHTML5
