--- a/test/cto-config.properties
+++ b/test/cto-config.properties
@@ -76,6 +76,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 #devtools
 spring.devtools.restart.enabled=true
 #spring.devtools.restart.additional-paths=src/main/java
-spring.devtools.restart.exclude=resource/**,template/**,view/**,static/**,tld/**
+spring.devtools.restart.exclude=view/**,static/**,template/**,tld/**
 
 
