--- a/test/cto-config-user.properties
+++ b/test/cto-config-user.properties
@@ -3,7 +3,7 @@ logging.level.root=WARN
 logging.level.org.springframework.web=error
 logging.level.com.cto=info
 logging.level.com.liuzi=debug
-logging.file=/File/Logs/CTOCloud/user_%d{yyyy/MM/dd}.log
+logging.file=/File/Logs/CTOCloud/user.log
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
