--- a/information-config/information-config-dev.properties
+++ b/information-config/information-config-dev.properties
@@ -7,3 +7,12 @@ ribbon:
 feign:
   hystrix:
     enabled: true
+    
+#Hystrix断路器超时时间
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 5000
