--- a/hystrix-turbine-config/hystrix-turbine-config-dev.properties
+++ b/hystrix-turbine-config/hystrix-turbine-config-dev.properties
@@ -1,11 +1,9 @@
 ﻿# 监控中心, url： actuator/hystrix.stream  
-turbine:
-  ### 配置Eureka中的serviceId列表，表明监控哪些服务
-  app-config: cto-user-service, cto-information-service
-  aggregator:
-    # 指定聚合哪些集群，多个使用","分割，默认为default。可使用http://.../turbine.stream?cluster={clusterConfig之一}访问
-    cluster-config: default
-  # 1. 指定集群名称，默认表达式appName；此时：turbine.aggregator.clusterConfig需要配置想要监控的应用名称
-  # 2. default: turbine.aggregator.clusterConfig可以不写，因为默认就是default
-  # 3. metadata['cluster']: 假设想要监控的应用配置了eureka.instance.metadata-map.cluster: ABC，则需要配置，同时turbine.aggregator.clusterConfig: ABC
-  cluster-name-expression: new String("default")
+### 配置Eureka中的serviceId列表，表明监控哪些服务
+turbine.appConfig=cto-user-service,cto-information-service
+# 指定聚合哪些集群，多个使用","分割，默认为default。可使用http://.../turbine.stream?cluster={clusterConfig之一}访问
+turbine:aggregator.clusterConfig=default
+# 1. 指定集群名称，默认表达式appName；此时：turbine.aggregator.clusterConfig需要配置想要监控的应用名称
+# 2. default: turbine.aggregator.clusterConfig可以不写，因为默认就是default
+# 3. metadata['cluster']: 假设想要监控的应用配置了eureka.instance.metadata-map.cluster: ABC，则需要配置，同时turbine.aggregator.clusterConfig: ABC
+turbine.clusterNameExpression=new String("default")
