--- a/information-config/information-config-dev.properties
+++ b/information-config/information-config-dev.properties
@@ -8,4 +8,4 @@ ribbon.ConnectTimeout=5000
 feign.hystrix.enabled=true
     
 #Hystrix断路器超时时间
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 500
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500
