--- a/user-config/user-config-dev.properties
+++ b/user-config/user-config-dev.properties
@@ -3,6 +3,7 @@
 ribbon.ReadTimeout=200
 #建立连接后从服务器读取到可用资源所用时间
 ribbon.ConnectTimeout=5000
+ribbon.eureka.enabled=true
 
 #开启Hystrix断路器 
 feign.hystrix.enabled=true
