--- a/user-config/user-config-dev.properties
+++ b/user-config/user-config-dev.properties
@@ -10,3 +10,6 @@ feign.hystrix.enabled=true
     
 #Hystrix断路器超时时间
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500
+
+#hystrix.stream
+management.endpoints.web.exposure.include=*
