--- a/user-config/user-config-dev.properties
+++ b/user-config/user-config-dev.properties
@@ -1,15 +1,15 @@
 ﻿#springCloud 默认开启ribbon, 设置feign客户端超时时间
 #建立连接所用时间
-ribbon.ReadTimeout=200
+#ribbon.ReadTimeout=200
 #建立连接后从服务器读取到可用资源所用时间
-ribbon.ConnectTimeout=5000
-ribbon.eureka.enabled=true
+#ribbon.ConnectTimeout=5000
+#ribbon.eureka.enabled=true
 
 #开启Hystrix断路器 
-feign.hystrix.enabled=true
+#feign.hystrix.enabled=true
     
 #Hystrix断路器超时时间
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500
 
 #hystrix.stream
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
