--- a/user-config/user-config-dev.properties
+++ b/user-config/user-config-dev.properties
@@ -5,8 +5,8 @@
 #ribbon.ConnectTimeout=5000
 #ribbon.eureka.enabled=true
 
-#开启Hystrix断路器 
-#feign.hystrix.enabled=true
+#开启Hystrix断路器
+feign.hystrix.enabled=true
     
 #Hystrix断路器超时时间
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500
