--- a/hystrix-turbine-config/hystrix-turbine-config-dev.properties
+++ b/hystrix-turbine-config/hystrix-turbine-config-dev.properties
@@ -8,4 +8,4 @@ turbine.aggregator.clusterConfig=default
 # 3. metadata['cluster']: 假设想要监控的应用配置了eureka.instance.metadata-map.cluster: ABC，则需要配置，同时turbine.aggregator.clusterConfig: ABC
 turbine.clusterNameExpression=new String("default")
 # hystrix收集地址
-turbine.instanceUrlSuffix=/hystrix.stream
+#turbine.instanceUrlSuffix=/hystrix.stream
