--- a/hystrix-turbine-config/hystrix-turbine-config-dev.properties
+++ b/hystrix-turbine-config/hystrix-turbine-config-dev.properties
@@ -1,4 +1,4 @@
-﻿# 监控中心 turbine.instanceUrlSuffix=/actuator/hystrix.stream
+﻿# 监控中心
 ### 配置Eureka中的serviceId列表，表明监控哪些服务
 turbine.appConfig=cto-user-service,cto-information-service
 # 指定聚合哪些集群，多个使用","分割，默认为default。可使用http://.../turbine.stream?cluster={clusterConfig之一}访问
