--- a/information-config/information-config-dev.properties
+++ b/information-config/information-config-dev.properties
@@ -1,27 +1,38 @@
-﻿### SpringCloud默认开启ribbon
-# Ribbon连接超时
-ribbon.ConnectTimeout=2000
-# Ribbon响应超时(建立连接后从服务器读取到可用资源所用时间)
-ribbon.ReadTimeout=5000
+﻿
 
-### 开启Hystrix断路器
+########### Feign RPC ##############
+#开启Hystrix断路器
 feign.hystrix.enabled=true
 
-### Hystrix 配置
-# 这样将会自动配置一个 Hystrix 并发策略插件的 hook，这个 hook 会将 SecurityContext 从主线程传输到 Hystrix 的命令。
-# 因为 Hystrix 不允许注册多个 Hystrix 策略，所以可以声明 HystrixConcurrencyStrategy
-# 为一个 Spring bean 来实现扩展。Spring Cloud 会在 Spring 的上下文中查找你的实现，并将其包装在自己的插件中。
-#hystrix.shareSecurityContext=true
-# 当在配置时间窗口内达到此数量的失败后，进行短路。默认20个
-#hystrix.command.default.circuitBreaker.requestVolumeThreshold=1
-# 触发短路的时间值，当该值设为5000时，则当触发 circuit break 后的5000毫秒内都会拒绝request
-# 也就是5000毫秒后才会关闭circuit。默认5000
-#hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=15000
-# 强制打开熔断器，如果打开这个开关，那么拒绝所有request，默认false
-#hystrix.command.default.circuitBreaker.forceOpen=false
-# 强制关闭熔断器 如果这个开关打开，circuit将一直关闭且忽略，默认false
-#hystrix.command.default.circuitBreaker.forceClosed=false
-# 熔断器超时时间，默认：1000毫秒
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
-# 具体方法的超时时间
-#hystrix.command.serverMethod.execution.isolation.thread.timeoutInMilliseconds=5000
+########### Ribbon客户端负载均衡 ##############
+# 建立连接超时时间
+ribbon.ConnectTimeout=250
+# 建立连接后从服务器读取到可用资源所用时间
+ribbon.ReadTimeout=10000
+# 是否开启重试, 默认false
+spring.cloud.loadbalancer.retry.enabled=true
+# 是否所有操作都重试
+ribbon.OkToRetryOnAllOperations=true
+# 重试发生，更换节点数最大值
+ribbon.MaxAutoRetriesNextServer=6
+# 单个节点重试最大值
+ribbon.MaxAutoRetries=1
+
+########### Swagger & Markup ##############
+swagger.title=信息服务接口文档
+swagger.description=CTO信息服务接口文档
+swagger.termsOfServiceUrl=https://www.6zcto.com
+swagger.contact=6zCTO
+swagger.website=https://www.6zcto.com
+swagger.email=6zcto@6zcto.com
+swagger.version=1.0
+# markup是否生效, 默认false
+swagger.markup.enable=true
+# 文档目录, 默认项目根目录
+swagger.markup.folder=D:/File/cto/information
+
+########### Hystrix断路器 ##############
+# 是否启用超时，默认启用true
+hystrix.command.default.execution.timeout.enabled=true
+# 执行超时时间，默认1000ms
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
