--- a/user-config/user-config-dev.properties
+++ b/user-config/user-config-dev.properties
@@ -68,9 +68,9 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 #hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds 
 # 错误比率阀值，如果错误率>=该值，circuit会被打开，并短路所有请求触发fallback。默认50
 #hystrix.command.default.circuitBreaker.errorThresholdPercentage
-#强制打开熔断器，如果打开这个开关，那么拒绝所有request，默认false
+# 强制打开熔断器，如果打开这个开关，那么拒绝所有request，默认false
 #hystrix.command.default.circuitBreaker.forceOpen 
-强制关闭熔断器 如果这个开关打开，circuit将一直关闭且忽略circuitBreaker.errorThresholdPercentage
+# 强制关闭熔断器 如果这个开关打开，circuit将一直关闭且忽略circuitBreaker.errorThresholdPercentage
 #hystrix.command.default.circuitBreaker.forceClosed 
 
 ### Metrics翻译信息 ###
